- Add data-else and data-else-condition tags?
- Add data-switch expression and data-tcase expression?
- Implement adquisition?
- Add options.macro (string) to set the name of the macro to invoke in a full render command?

New in 0.41.0
- Update command improved: support of method invocation and ranges?
- Full reactive support: support of nested object?

New in 0.40.0
- Update effects initial support.

New in 0.39.0
- Update command improved: support of array and object operations added using a new configuration option (dictionaryActions). 
- Partial reactive support added: only supports change of properties directly in dictionary (not includes nested objects).

New in 0.38.2
- Some errors about non declared variables fixed.

New in 0.38.1
- Bug fixed: problem with npm solved.

New in 0.38.0
- New configuration option added: goToURLHash. It is a boolean value (default to true the first execution of ZPT, the rest executions are default to false). If it is true ZPT-JS updates the location.href to the current URL hash. This is needed because normal behaviour does not work, ids generated by ZPT-JS are not available when the browser try to use the URL hash.

New in 0.37.1
- Bug fixed: an error occurs when strict mode is set to true and a var is defined using tal:define.

New in 0.37.0
- Removed jquery dependency in non dev.
- Jquery expressions replaced by query expressions.
- Bug fixed: jsdom dependency added.
- Added support to run tests using the console:
    - npm run testBrowser   // Run the related to browser tests
    - npm run testNode      // Run the related to node.js tests
    - npm run test          // Run all tests

New in 0.36.1
- Dependencies updated.
- Replaced node-jsdom dependency by jsdom due it is no longer maintained (install of ZPT-JS failed using some recent versions of node).

New in 0.36.0
- Added new command: update.
- Added options.updatedDictionary (object) to set the list of properties to bind.

New in 0.35.0