@@ -671,5 +671,18 @@
                 </li>
             </ol>
         </div>
+        
+        <h2>Multiple properties of objects updated</h2>
+        <div id="t51">
+            <ol>
+                <li data-repeat="object objectList51">
+                    <span data-content="object/id" data-attributes="class 'objectId51'"></span>:
+                    <span data-content="object/text | '-'" data-attributes="class 'objectText51'"></span>
+                    <br>
+                    <div data-content="object/longText | '-'" data-attributes="class 'objectLongText51'"></div>
+                    <div data-content="object/anotherLongText | '-'" data-attributes="class 'anotherLongText51'"></div>
+                </li>
+            </ol>
+        </div>
     </body>
 </html>
